fixed spacing

--- a/dev/css/us/component/product-tile.css
+++ b/dev/css/us/component/product-tile.css
@@ -12,12 +12,12 @@
 
 @media screen and (min-width: 768px) {
 	.product-row__tile--img-tile.box-shadow.skinny-promo-tile-homepage{
-		margin-top: 5px;
+		margin-top: 0px;
 		margin-bottom: -20px;
 	}
 }
 
-@media screen and (min-width: 10248px) {
+@media screen and (min-width: 1024px) {
 	.product-row__tile--img-tile.box-shadow.skinny-promo-tile-homepage{
 		margin-top: 0;
 		margin-bottom: -20px;
